update suggestion and support page